--- a/projects.html
+++ b/projects.html
@@ -10,15 +10,15 @@
 
     <div class="title-bar">
         <div class="title-bar-left">
-          <button type="button" class="menu-icon hide-for-large hide-for-medium" data-toggle="offCanvasLeft">Menu</button>
-          <div class="off-canvas position-left" id="offCanvasLeft" data-off-canvas>
-              <ul class="menu" style="list-style-type: none;">
-                  <li><a class="categories" href="./index.html" target="_self" style="color: black">Home</a></li>
-                  <li><a class="categories" href="./projects.html" target="_self" style="color: black">Projects</a></li>
-                  <li><a class="categories" href="./resume.html" target="_self" style="color: black">Resume</a></li>
-                  <li><a class="categories" href="./fun.html" target="_self" style="color: black">Fun Facts</a></li>
-              </ul>
-          </div>
+            <button type="button" class="menu-icon hide-for-large hide-for-medium" data-toggle="offCanvasLeft"><span class="menu" style="margin-left: 2rem; color: white">Menu</span></button>
+            <div class="off-canvas position-left" id="offCanvasLeft" data-off-canvas>
+                <ul class="menu" style="list-style-type: none;">
+                    <li><a href="./index.html" target="_self" style="color: black; width: 10rem">Home</a></li>
+                    <li><a href="./projects.html" target="_self" style="color: black; width: 11rem">Projects</a></li>
+                    <li><a href="./resume.html" target="_self" style="color: black; width: 11rem">Resume</a></li>
+                    <li><a href="./fun.html" target="_self" style="color: black; width: 12rem">Fun Facts</a></li>
+                </ul>
+            </div>
           
           <div class="grid-x grid-padding-x">
             <div class="cell large-auto medium-auto large-offset-1 hide-for-small-only"><a href="./index.html" target="_self">Home</a></div>
