--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
     <div class="title-bar">
         <div class="title-bar-left">
-          <button type="button" class="menu-icon hide-for-large hide-for-medium" data-toggle="offCanvasLeft">Menu</button>
+          <button type="button" class="menu-icon hide-for-large hide-for-medium" data-toggle="offCanvasLeft"><span class="menu" style="margin-left: 2rem; color: white">Menu</span></button>
           <div class="off-canvas position-left" id="offCanvasLeft" data-off-canvas>
               <ul class="menu" style="list-style-type: none;">
-                  <li><a href="./index.html" target="_self" style="color: black">Home</a></li>
-                  <li><a href="./projects.html" target="_self" style="color: black">Projects</a></li>
-                  <li><a href="./resume.html" target="_self" style="color: black">Resume</a></li>
-                  <li><a href="./fun.html" target="_self" style="color: black">Fun Facts</a></li>
+                  <li><a href="./index.html" target="_self" style="color: black; width: 10rem">Home</a></li>
+                  <li><a href="./projects.html" target="_self" style="color: black; width: 11rem">Projects</a></li>
+                  <li><a href="./resume.html" target="_self" style="color: black; width: 11rem">Resume</a></li>
+                  <li><a href="./fun.html" target="_self" style="color: black; width: 12rem">Fun Facts</a></li>
               </ul>
           </div>
           
