--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Personal Website</title>
+	<title>Home Page: Tseng Yang</title>
 	<link rel="stylesheet" href="css/foundation.css">
 </head>
 <body>
