Updated projects file

--- a/projects.html
+++ b/projects.html
@@ -39,13 +39,15 @@
         <div class="grid-margin-y grid-padding-y show-for-large" style="height: 500px;">
             <h3 class="car" style="text-decoration: underline;">Car Lighting and Cooling System</h3>
             <p class="carDesc cell medium-6" style="float: left; text-align: justify; margin-top: 3rem;">
-                For this project, my friend and I created a system that provided cooling and Lighting
-                depending on the surrounding environment. We the programmed the microcontroller (STM32407VG) 
+                For this project, my friend and I created a system that provided cooling and lighting
+                depending on the surrounding environment. We programmed the microcontroller (STM32407VG) 
                 using embedded C language. The system consisted of different types of hardware (e.g. sensors, motors,
-                microcontroller, LCD, LED). If the environment is dark, the system will turn on LED at different
-                brightness levels depending on how dark it is. The system will turn on a motor to turn a fan at different
+                microcontroller, LCD, LED). If the environment is dark, the system will turn on LEDs at different
+                brightness levels depending on how dark it is. The system will also turn on a motor to spin a fan at different
                 speeds depending on how hot it is. The system would also display to the user the brightness/speed levels. 
-                Not only that, but there were buttons used to allow the user to manually adjust the brightness and speed.
+                Not only that, but there were buttons used to allow the user to manually adjust the brightness and speed. 
+                The purpose of this project was to apply what we learned in class to create a real life system. It also 
+                proved our understanding of how to program a microcontroller.
             </p>
             <img src="carsystem.JPG" class="show-for-large" alt="carsystem" style="float: right; position: relative; right: 2rem; height: 80%;">
         </div>
@@ -54,13 +56,15 @@
             <div class="grid-margin-y grid-padding-y show-for-medium-only" style="height: 600px;">
                 <h3 class="car" style="text-decoration: underline;">Car Lighting and Cooling System</h3>
                 <p class="carDesc cell medium-6" style="float: left; text-align: justify;">
-                    For this project, my friend and I created a system that provided cooling and Lighting
-                    depending on the surrounding environment. We the programmed the microcontroller (STM32407VG) 
+                    For this project, my friend and I created a system that provided cooling and lighting
+                    depending on the surrounding environment. We programmed the microcontroller (STM32407VG) 
                     using embedded C language. The system consisted of different types of hardware (e.g. sensors, motors,
-                    microcontroller, LCD, LED). If the environment is dark, the system will turn on LED at different
-                    brightness levels depending on how dark it is. The system will turn on a motor to turn a fan at different
+                    microcontroller, LCD, LED). If the environment is dark, the system will turn on LEDs at different
+                    brightness levels depending on how dark it is. The system will also turn on a motor to spin a fan at different
                     speeds depending on how hot it is. The system would also display to the user the brightness/speed levels. 
-                    Not only that, but there were buttons used to allow the user to manually adjust the brightness and speed.
+                    Not only that, but there were buttons used to allow the user to manually adjust the brightness and speed. 
+                    The purpose of this project was to apply what we learned in class to create a real life system. It also 
+                    proved our understanding of how to program a microcontroller.
                 </p>
                 <img src="carsystem.JPG" class="show-for-medium-only" alt="carsystem" style="float: right; position: relative; right: 1rem; height: 60%; margin-top: 1rem;">
             </div>
@@ -69,13 +73,15 @@
         <div class="grid-margin-y grid-padding-y show-for-small-only" style="height: 800px;">
             <h3 class="car" style="text-decoration: underline;">Car Lighting and Cooling System</h3>
             <p class="carDesc cell medium-6" style="text-align: justify; width: 20rem">
-                For this project, my friend and I created a system that provided cooling and Lighting
-                depending on the surrounding environment. We the programmed the microcontroller (STM32407VG) 
+                For this project, my friend and I created a system that provided cooling and lighting
+                depending on the surrounding environment. We programmed the microcontroller (STM32407VG) 
                 using embedded C language. The system consisted of different types of hardware (e.g. sensors, motors,
-                microcontroller, LCD, LED). If the environment is dark, the system will turn on LED at different
-                brightness levels depending on how dark it is. The system will turn on a motor to turn a fan at different
+                microcontroller, LCD, LED). If the environment is dark, the system will turn on LEDs at different
+                brightness levels depending on how dark it is. The system will also turn on a motor to spin a fan at different
                 speeds depending on how hot it is. The system would also display to the user the brightness/speed levels. 
-                Not only that, but there were buttons used to allow the user to manually adjust the brightness and speed.
+                Not only that, but there were buttons used to allow the user to manually adjust the brightness and speed. 
+                The purpose of this project was to apply what we learned in class to create a real life system. It also 
+                proved our understanding of how to program a microcontroller.
             </p>
             <img src="carsystem.JPG" class="show-for-small-only" alt="carsystem" style="margin-left: 3rem; margin-right: auto; height: 30%;">
         </div>
@@ -94,12 +100,12 @@
             <div class="cell">
                 <h3 class="mirror" style="text-decoration: underline; float: right; margin-right: 3rem;">Smart Mirror</h3>
                 <p class="mirrorDesc cell medium-6" style="float: right; margin-top: 3rem; text-align: justify; width: 30rem;">
-                    The smart mirrow is a mirror I build for my sister's birthday. This used a 
+                    The smart mirrow is a mirror I built for my sister's birthday. This used a 
                     computer monitor to display anything I wanted. This monitor would be placed behind a two-way mirror 
-                    that would allow the user to see what's being displayed and could use it as a regular mirrow. I 
+                    that would allow the user to see what's being displayed and could use it as a regular mirror. I 
                     had to use woodworking to build the mirror frame as well. The main purpose of this project was to 
-                    give my sister a cool little birthday present. It also helped me learn more about how to code a 
-                    Raspberry Pi and work more on my woodworking skills.
+                    give my sister a cool little birthday present. It helped me learn more about how to code a 
+                    Raspberry Pi and work more on my woodworking skills. Not only that, but it made me my sister's favorite brother!
                 </p>
             </div>
         </div>
@@ -108,12 +114,12 @@
         <div class="grid-margin-y grid-padding-y show-for-medium-only" style="height: 500px;">
             <h3 class="mirror" style="text-decoration: underline; text-align: right;">Smart Mirror</h3>
             <p class="mirrorDesc cell medium-6" style="float: right; text-align: justify;">
-                The smart mirrow is a mirror I build for my sister's birthday. This used a 
-                    computer monitor to display anything I wanted. This monitor would be placed behind a two-way mirror 
-                    that would allow the user to see what's being displayed and could use it as a regular mirrow. I 
-                    had to use woodworking to build the mirror frame as well. The main purpose of this project was to 
-                    give my sister a cool little birthday present. It also helped me learn more about how to code a 
-                    Raspberry Pi and work more on my woodworking skills.
+                The smart mirrow is a mirror I built for my sister's birthday. This used a 
+                computer monitor to display anything I wanted. This monitor would be placed behind a two-way mirror 
+                that would allow the user to see what's being displayed and could use it as a regular mirror. I 
+                had to use woodworking to build the mirror frame as well. The main purpose of this project was to 
+                give my sister a cool little birthday present. It helped me learn more about how to code a 
+                Raspberry Pi and work more on my woodworking skills. Not only that, but it made me my sister's favorite brother!
             </p>
             <img src="frontmirror.jpg" alt="frontmirror" style="float: left; position: relative; left: 1rem; height: 42%; margin-top: 3rem;">
         </div>
@@ -122,12 +128,12 @@
         <div class="grid-margin-y grid-padding-y show-for-small-only" style="height: 600px;">
             <h3 class="mirror" style="text-decoration: underline;">Smart Mirror</h3>
             <p class="mirrorDesc cell medium-6" style="text-align: justify; width: 20rem">
-                The smart mirrow is a mirror I build for my sister's birthday. This used a 
+                The smart mirrow is a mirror I built for my sister's birthday. This used a 
                 computer monitor to display anything I wanted. This monitor would be placed behind a two-way mirror 
-                that would allow the user to see what's being displayed and could use it as a regular mirrow. I 
+                that would allow the user to see what's being displayed and could use it as a regular mirror. I 
                 had to use woodworking to build the mirror frame as well. The main purpose of this project was to 
-                give my sister a cool little birthday present. It also helped me learn more about how to code a 
-                Raspberry Pi and work more on my woodworking skills.
+                give my sister a cool little birthday present. It helped me learn more about how to code a 
+                Raspberry Pi and work more on my woodworking skills. Not only that, but it made me my sister's favorite brother!
             </p>
             <img src="frontmirror.jpg" class="show-for-small-only" alt="frontmirror" style="margin-left: 2rem; margin-right: auto; height: 32%;">
         </div>
@@ -143,7 +149,7 @@
         <div class="grid-margin-y grid-padding-y show-for-large" style="height: 500px;">
             <h3 class="door" style="text-decoration: underline;">Opened Car Door Counter</h3>
             <p class="doorDesc cell medium-6" style="float: left; text-align: justify; margin-top: 3rem;">
-                This small and simple opened car door counter was a small little project I did.
+                This small and simple opened car door counter was a fun, small little project I did.
                 Although I did not set it up with an actual car, I was able to wire the circuit up and 
                 test my circuit on a breadboard. This system basically calculates how many doors are opened on a car.
                 I used multiple switches and flipped them on or off to represent a door being opened or closed.
@@ -153,7 +159,7 @@
             </p>
             <video width="400" height="600" controls style="float: right; position: relative; right: 2rem; height: 80%;">
                 <source src="door.mp4" type="video/mp4">
-                your browswer does not support the video tag.
+                your browser does not support the video tag.
             </video>
         </div>
 
@@ -161,7 +167,7 @@
         <div class="grid-margin-y grid-padding-y show-for-medium-only" style="height: 700px;">
             <h3 class="door" style="text-decoration: underline;">Opened Car Door Counter</h3>
             <p class="doorDesc cell medium-6" style="float: left; text-align: justify;">
-                This small and simple opened car door counter was a small little project I did.
+                This small and simple opened car door counter was a fun, small little project I did.
                 Although I did not set it up with an actual car, I was able to wire the circuit up and 
                 test my circuit on a breadboard. This system basically calculates how many doors are opened on a car.
                 I used multiple switches and flipped them on or off to represent a door being opened or closed.
@@ -171,7 +177,7 @@
             </p>
             <video width="200" height="400" controls style="float: right; position: relative; right: 1rem; height: 60%; margin-top: 1rem;">
                 <source src="door.mp4" type="video/mp4">
-                your browswer does not support the video tag.
+                your browser does not support the video tag.
             </video>
         </div>
 
@@ -180,7 +186,7 @@
         <div class="grid-margin-y grid-padding-y show-for-small-only" style="height: 700px;">
             <h3 class="door" style="text-decoration: underline;">Opened Car Door Counter</h3>
             <p class="doorDesc cell medium-6" style="text-align: justify; width: 20rem">
-                This small and simple opened car door counter was a small little project I did.
+                This small and simple opened car door counter was a fun, small little project I did.
                 Although I did not set it up with an actual car, I was able to wire the circuit up and 
                 test my circuit on a breadboard. This system basically calculates how many doors are opened on a car.
                 I used multiple switches and flipped them on or off to represent a door being opened or closed.
@@ -190,7 +196,7 @@
             </p>
             <video width="300" height="200" controls>
                 <source src="door.mp4" type="video/mp4" style="margin-left: 3rem; margin-right: auto; height: 30%;">
-                your browswer does not support the video tag.
+                your browser does not support the video tag.
             </video>
         </div>
 
