--- a/fun.html
+++ b/fun.html
@@ -220,7 +220,7 @@
             </div>
 
             <p class="desc">
-                Exploring the earth and enjoying nature is something I alway want to do. 
+                Exploring the earth and enjoying nature is something I always want to do. 
                 I want to be able to travel the world and see its beauty with my own eyes. 
                 These are just a few photos I've taken with my phone, but it just shows 
                 how stunning the world looks. Exploring the world helps me remember to always 
@@ -266,7 +266,7 @@
             </div>
 
             <p class="desc">
-                Exploring the earth and enjoying nature is something I alway want to do. 
+                Exploring the earth and enjoying nature is something I always want to do. 
                 I want to be able to travel the world and see its beauty with my own eyes. 
                 These are just a few photos I've taken with my phone, but it just shows 
                 how stunning the world looks. Exploring the world helps me remember to always 
@@ -313,7 +313,7 @@
             </div>
 
             <p class="desc">
-                Exploring the earth and enjoying nature is something I alway want to do. 
+                Exploring the earth and enjoying nature is something I always want to do. 
                 I want to be able to travel the world and see its beauty with my own eyes. 
                 These are just a few photos I've taken with my phone, but it just shows 
                 how stunning the world looks. Exploring the world helps me remember to always 
