--- a/projects.html
+++ b/projects.html
@@ -70,9 +70,9 @@
             </div>
 
         <!--SMALL-->
-        <div class="grid-margin-y grid-padding-y show-for-small-only" style="height: 800px;">
+        <div class="grid-margin-y grid-padding-y show-for-small-only" style="height: 850px;">
             <h3 class="car" style="text-decoration: underline;">Car Lighting and Cooling System</h3>
-            <p class="carDesc cell medium-6" style="text-align: justify; width: 20rem">
+            <p class="carDesc cell medium-5" style="text-align: justify; width: 22rem">
                 For this project, my friend and I created a system that provided cooling and lighting
                 depending on the surrounding environment. We programmed the microcontroller (STM32407VG) 
                 using embedded C language. The system consisted of different types of hardware (e.g. sensors, motors,
@@ -83,7 +83,7 @@
                 The purpose of this project was to apply what we learned in class to create a real life system. It also 
                 proved our understanding of how to program a microcontroller.
             </p>
-            <img src="carsystem.JPG" class="show-for-small-only" alt="carsystem" style="margin-left: 3rem; margin-right: auto; height: 30%;">
+            <img src="carsystem.JPG" class="show-for-small-only" alt="carsystem" style="margin-left: 4rem; margin-bottom: 1rem; height: 30%;">
         </div>
     </div>
 
@@ -100,7 +100,7 @@
             <div class="cell">
                 <h3 class="mirror" style="text-decoration: underline; float: right; margin-right: 3rem;">Smart Mirror</h3>
                 <p class="mirrorDesc cell medium-6" style="float: right; margin-top: 3rem; text-align: justify; width: 30rem;">
-                    The smart mirrow is a mirror I built for my sister's birthday. This used a 
+                    The smart mirror is a mirror I built for my sister's birthday. This used a 
                     computer monitor to display anything I wanted. This monitor would be placed behind a two-way mirror 
                     that would allow the user to see what's being displayed and could use it as a regular mirror. I 
                     had to use woodworking to build the mirror frame as well. The main purpose of this project was to 
@@ -114,7 +114,7 @@
         <div class="grid-margin-y grid-padding-y show-for-medium-only" style="height: 500px;">
             <h3 class="mirror" style="text-decoration: underline; text-align: right;">Smart Mirror</h3>
             <p class="mirrorDesc cell medium-6" style="float: right; text-align: justify;">
-                The smart mirrow is a mirror I built for my sister's birthday. This used a 
+                The smart mirror is a mirror I built for my sister's birthday. This used a 
                 computer monitor to display anything I wanted. This monitor would be placed behind a two-way mirror 
                 that would allow the user to see what's being displayed and could use it as a regular mirror. I 
                 had to use woodworking to build the mirror frame as well. The main purpose of this project was to 
@@ -125,17 +125,17 @@
         </div>
 
         <!--SMALL-->
-        <div class="grid-margin-y grid-padding-y show-for-small-only" style="height: 600px;">
+        <div class="grid-margin-y grid-padding-y show-for-small-only" style="height: 650px;">
             <h3 class="mirror" style="text-decoration: underline;">Smart Mirror</h3>
-            <p class="mirrorDesc cell medium-6" style="text-align: justify; width: 20rem">
-                The smart mirrow is a mirror I built for my sister's birthday. This used a 
+            <p class="mirrorDesc cell medium-5" style="text-align: justify; width: 22rem">
+                The smart mirror is a mirror I built for my sister's birthday. This used a 
                 computer monitor to display anything I wanted. This monitor would be placed behind a two-way mirror 
                 that would allow the user to see what's being displayed and could use it as a regular mirror. I 
                 had to use woodworking to build the mirror frame as well. The main purpose of this project was to 
                 give my sister a cool little birthday present. It helped me learn more about how to code a 
                 Raspberry Pi and work more on my woodworking skills. Not only that, but it made me my sister's favorite brother!
             </p>
-            <img src="frontmirror.jpg" class="show-for-small-only" alt="frontmirror" style="margin-left: 2rem; margin-right: auto; height: 32%;">
+            <img src="frontmirror.jpg" class="show-for-small-only" alt="frontmirror" style="height: 32%; margin-left: 2rem;">
         </div>
     </div>
 
@@ -183,9 +183,9 @@
 
 
         <!--SMALL-->
-        <div class="grid-margin-y grid-padding-y show-for-small-only" style="height: 700px;">
+        <div class="grid-margin-y grid-padding-y show-for-small-only" style="height: 750px;">
             <h3 class="door" style="text-decoration: underline;">Opened Car Door Counter</h3>
-            <p class="doorDesc cell medium-6" style="text-align: justify; width: 20rem">
+            <p class="doorDesc cell medium-5" style="text-align: justify; width: 22rem">
                 This small and simple opened car door counter was a fun, small little project I did.
                 Although I did not set it up with an actual car, I was able to wire the circuit up and 
                 test my circuit on a breadboard. This system basically calculates how many doors are opened on a car.
@@ -194,7 +194,7 @@
                 The purpose of this project was to help me understand how to use different IC (integrated circuit) chips and how
                 to use a seven-segment display. 
             </p>
-            <video width="300" height="200" controls>
+            <video width="350" height="200" controls>
                 <source src="door.mp4" type="video/mp4" style="margin-left: 3rem; margin-right: auto; height: 30%;">
                 your browser does not support the video tag.
             </video>
