--- a/resume.html
+++ b/resume.html
@@ -3,22 +3,22 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Foundation Intro</title>
+	<title>Tseng's Resume</title>
 	<link rel="stylesheet" href="css/foundation.css">
 </head>
 <body>
 
     <div class="title-bar">
         <div class="title-bar-left">
-          <button type="button" class="menu-icon hide-for-large hide-for-medium" data-toggle="offCanvasLeft">Menu</button>
-          <div class="off-canvas position-left" id="offCanvasLeft" data-off-canvas>
-              <ul class="menu" style="list-style-type: none;">
-                  <li><a href="./index.html" target="_self" style="color: black">Home</a></li>
-                  <li><a href="./projects.html" target="_self" style="color: black">Projects</a></li>
-                  <li><a href="./resume.html" target="_self" style="color: black">Resume</a></li>
-                  <li><a href="./fun.html" target="_self" style="color: black">Fun Facts</a></li>
-              </ul>
-          </div>
+            <button type="button" class="menu-icon hide-for-large hide-for-medium" data-toggle="offCanvasLeft"><span class="menu" style="margin-left: 2rem; color: white">Menu</span></button>
+            <div class="off-canvas position-left" id="offCanvasLeft" data-off-canvas>
+                <ul class="menu" style="list-style-type: none;">
+                    <li><a href="./index.html" target="_self" style="color: black; width: 10rem">Home</a></li>
+                    <li><a href="./projects.html" target="_self" style="color: black; width: 11rem">Projects</a></li>
+                    <li><a href="./resume.html" target="_self" style="color: black; width: 11rem">Resume</a></li>
+                    <li><a href="./fun.html" target="_self" style="color: black; width: 12rem">Fun Facts</a></li>
+                </ul>
+            </div>
           
           <div class="grid-x grid-padding-x">
             <div class="cell large-auto medium-auto large-offset-1 hide-for-small-only"><a href="./index.html" target="_self">Home</a></div>
@@ -36,7 +36,7 @@
                     Tseng Yang
                 </p>
                 <p class="bionumber">
-                    (651) - 334 - 8823
+                    (651) - ### - ####
                 </p>
                 <p class="linkedin">
                     <a class="stthomas" href="http://www.linkedin.com/in/tseng-yang-797a31192" target="_blank">http://www.linkedin.com/in/tseng-yang-797a31192</a>
