--- a/projects.html
+++ b/projects.html
@@ -3,22 +3,22 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Foundation Intro</title>
+	<title>Tseng's Projects</title>
 	<link rel="stylesheet" href="css/foundation.css">
 </head>
 <body>
 
     <div class="title-bar">
         <div class="title-bar-left">
-          <button type="button" class="menu-icon hide-for-large hide-for-medium" data-toggle="offCanvasLeft">Menu</button>
-          <div class="off-canvas position-left" id="offCanvasLeft" data-off-canvas>
-              <ul class="menu" style="list-style-type: none;">
-                  <li><a class="categories" href="./index.html" target="_self" style="color: black">Home</a></li>
-                  <li><a class="categories" href="./projects.html" target="_self" style="color: black">Projects</a></li>
-                  <li><a class="categories" href="./resume.html" target="_self" style="color: black">Resume</a></li>
-                  <li><a class="categories" href="./fun.html" target="_self" style="color: black">Fun Facts</a></li>
-              </ul>
-          </div>
+            <button type="button" class="menu-icon hide-for-large hide-for-medium" data-toggle="offCanvasLeft"><span class="menu" style="margin-left: 2rem; color: white">Menu</span></button>
+            <div class="off-canvas position-left" id="offCanvasLeft" data-off-canvas>
+                <ul class="menu" style="list-style-type: none;">
+                    <li><a href="./index.html" target="_self" style="color: black; width: 10rem">Home</a></li>
+                    <li><a href="./projects.html" target="_self" style="color: black; width: 11rem">Projects</a></li>
+                    <li><a href="./resume.html" target="_self" style="color: black; width: 11rem">Resume</a></li>
+                    <li><a href="./fun.html" target="_self" style="color: black; width: 12rem">Fun Facts</a></li>
+                </ul>
+            </div>
           
           <div class="grid-x grid-padding-x">
             <div class="cell large-auto medium-auto large-offset-1 hide-for-small-only"><a href="./index.html" target="_self">Home</a></div>
@@ -39,13 +39,15 @@
         <div class="grid-margin-y grid-padding-y show-for-large" style="height: 500px;">
             <h3 class="car" style="text-decoration: underline;">Car Lighting and Cooling System</h3>
             <p class="carDesc cell medium-6" style="float: left; text-align: justify; margin-top: 3rem;">
-                For this project, my friend and I created a system that provided cooling and Lighting
-                depending on the surrounding environment. We the programmed the microcontroller (STM32407VG) 
+                For this project, my friend and I created a system that provided cooling and lighting
+                depending on the surrounding environment. We programmed the microcontroller (STM32407VG) 
                 using embedded C language. The system consisted of different types of hardware (e.g. sensors, motors,
-                microcontroller, LCD, LED). If the environment is dark, the system will turn on LED at different
-                brightness levels depending on how dark it is. The system will turn on a motor to turn a fan at different
+                microcontroller, LCD, LED). If the environment is dark, the system will turn on LEDs at different
+                brightness levels depending on how dark it is. The system will also turn on a motor to spin a fan at different
                 speeds depending on how hot it is. The system would also display to the user the brightness/speed levels. 
-                Not only that, but there were buttons used to allow the user to manually adjust the brightness and speed.
+                Not only that, but there were buttons used to allow the user to manually adjust the brightness and speed. 
+                The purpose of this project was to apply what we learned in class to create a real life system. It also 
+                proved our understanding of how to program a microcontroller.
             </p>
             <img src="carsystem.JPG" class="show-for-large" alt="carsystem" style="float: right; position: relative; right: 2rem; height: 80%;">
         </div>
@@ -54,30 +56,34 @@
             <div class="grid-margin-y grid-padding-y show-for-medium-only" style="height: 600px;">
                 <h3 class="car" style="text-decoration: underline;">Car Lighting and Cooling System</h3>
                 <p class="carDesc cell medium-6" style="float: left; text-align: justify;">
-                    For this project, my friend and I created a system that provided cooling and Lighting
-                    depending on the surrounding environment. We the programmed the microcontroller (STM32407VG) 
+                    For this project, my friend and I created a system that provided cooling and lighting
+                    depending on the surrounding environment. We programmed the microcontroller (STM32407VG) 
                     using embedded C language. The system consisted of different types of hardware (e.g. sensors, motors,
-                    microcontroller, LCD, LED). If the environment is dark, the system will turn on LED at different
-                    brightness levels depending on how dark it is. The system will turn on a motor to turn a fan at different
+                    microcontroller, LCD, LED). If the environment is dark, the system will turn on LEDs at different
+                    brightness levels depending on how dark it is. The system will also turn on a motor to spin a fan at different
                     speeds depending on how hot it is. The system would also display to the user the brightness/speed levels. 
-                    Not only that, but there were buttons used to allow the user to manually adjust the brightness and speed.
+                    Not only that, but there were buttons used to allow the user to manually adjust the brightness and speed. 
+                    The purpose of this project was to apply what we learned in class to create a real life system. It also 
+                    proved our understanding of how to program a microcontroller.
                 </p>
                 <img src="carsystem.JPG" class="show-for-medium-only" alt="carsystem" style="float: right; position: relative; right: 1rem; height: 60%; margin-top: 1rem;">
             </div>
 
         <!--SMALL-->
-        <div class="grid-margin-y grid-padding-y show-for-small-only" style="height: 800px;">
+        <div class="grid-margin-y grid-padding-y show-for-small-only" style="height: 850px;">
             <h3 class="car" style="text-decoration: underline;">Car Lighting and Cooling System</h3>
-            <p class="carDesc cell medium-6" style="text-align: justify; width: 20rem">
-                For this project, my friend and I created a system that provided cooling and Lighting
-                depending on the surrounding environment. We the programmed the microcontroller (STM32407VG) 
+            <p class="carDesc cell medium-5" style="text-align: justify; width: 22rem">
+                For this project, my friend and I created a system that provided cooling and lighting
+                depending on the surrounding environment. We programmed the microcontroller (STM32407VG) 
                 using embedded C language. The system consisted of different types of hardware (e.g. sensors, motors,
-                microcontroller, LCD, LED). If the environment is dark, the system will turn on LED at different
-                brightness levels depending on how dark it is. The system will turn on a motor to turn a fan at different
+                microcontroller, LCD, LED). If the environment is dark, the system will turn on LEDs at different
+                brightness levels depending on how dark it is. The system will also turn on a motor to spin a fan at different
                 speeds depending on how hot it is. The system would also display to the user the brightness/speed levels. 
-                Not only that, but there were buttons used to allow the user to manually adjust the brightness and speed.
+                Not only that, but there were buttons used to allow the user to manually adjust the brightness and speed. 
+                The purpose of this project was to apply what we learned in class to create a real life system. It also 
+                proved our understanding of how to program a microcontroller.
             </p>
-            <img src="carsystem.JPG" class="show-for-small-only" alt="carsystem" style="margin-left: 3rem; margin-right: auto; height: 30%;">
+            <img src="carsystem.JPG" class="show-for-small-only" alt="carsystem" style="margin-left: 4rem; margin-bottom: 1rem; height: 30%;">
         </div>
     </div>
 
@@ -94,12 +100,12 @@
             <div class="cell">
                 <h3 class="mirror" style="text-decoration: underline; float: right; margin-right: 3rem;">Smart Mirror</h3>
                 <p class="mirrorDesc cell medium-6" style="float: right; margin-top: 3rem; text-align: justify; width: 30rem;">
-                    The smart mirrow is a mirror I build for my sister's birthday. This used a 
+                    The smart mirror is a mirror I built for my sister's birthday. This used a 
                     computer monitor to display anything I wanted. This monitor would be placed behind a two-way mirror 
-                    that would allow the user to see what's being displayed and could use it as a regular mirrow. I 
+                    that would allow the user to see what's being displayed and could use it as a regular mirror. I 
                     had to use woodworking to build the mirror frame as well. The main purpose of this project was to 
-                    give my sister a cool little birthday present. It also helped me learn more about how to code a 
-                    Raspberry Pi and work more on my woodworking skills.
+                    give my sister a cool little birthday present. It helped me learn more about how to code a 
+                    Raspberry Pi and work more on my woodworking skills. Not only that, but it made me my sister's favorite brother!
                 </p>
             </div>
         </div>
@@ -108,28 +114,28 @@
         <div class="grid-margin-y grid-padding-y show-for-medium-only" style="height: 500px;">
             <h3 class="mirror" style="text-decoration: underline; text-align: right;">Smart Mirror</h3>
             <p class="mirrorDesc cell medium-6" style="float: right; text-align: justify;">
-                The smart mirrow is a mirror I build for my sister's birthday. This used a 
-                    computer monitor to display anything I wanted. This monitor would be placed behind a two-way mirror 
-                    that would allow the user to see what's being displayed and could use it as a regular mirrow. I 
-                    had to use woodworking to build the mirror frame as well. The main purpose of this project was to 
-                    give my sister a cool little birthday present. It also helped me learn more about how to code a 
-                    Raspberry Pi and work more on my woodworking skills.
+                The smart mirror is a mirror I built for my sister's birthday. This used a 
+                computer monitor to display anything I wanted. This monitor would be placed behind a two-way mirror 
+                that would allow the user to see what's being displayed and could use it as a regular mirror. I 
+                had to use woodworking to build the mirror frame as well. The main purpose of this project was to 
+                give my sister a cool little birthday present. It helped me learn more about how to code a 
+                Raspberry Pi and work more on my woodworking skills. Not only that, but it made me my sister's favorite brother!
             </p>
             <img src="frontmirror.jpg" alt="frontmirror" style="float: left; position: relative; left: 1rem; height: 42%; margin-top: 3rem;">
         </div>
 
         <!--SMALL-->
-        <div class="grid-margin-y grid-padding-y show-for-small-only" style="height: 600px;">
+        <div class="grid-margin-y grid-padding-y show-for-small-only" style="height: 650px;">
             <h3 class="mirror" style="text-decoration: underline;">Smart Mirror</h3>
-            <p class="mirrorDesc cell medium-6" style="text-align: justify; width: 20rem">
-                The smart mirrow is a mirror I build for my sister's birthday. This used a 
+            <p class="mirrorDesc cell medium-5" style="text-align: justify; width: 22rem">
+                The smart mirror is a mirror I built for my sister's birthday. This used a 
                 computer monitor to display anything I wanted. This monitor would be placed behind a two-way mirror 
-                that would allow the user to see what's being displayed and could use it as a regular mirrow. I 
+                that would allow the user to see what's being displayed and could use it as a regular mirror. I 
                 had to use woodworking to build the mirror frame as well. The main purpose of this project was to 
-                give my sister a cool little birthday present. It also helped me learn more about how to code a 
-                Raspberry Pi and work more on my woodworking skills.
+                give my sister a cool little birthday present. It helped me learn more about how to code a 
+                Raspberry Pi and work more on my woodworking skills. Not only that, but it made me my sister's favorite brother!
             </p>
-            <img src="frontmirror.jpg" class="show-for-small-only" alt="frontmirror" style="margin-left: 2rem; margin-right: auto; height: 32%;">
+            <img src="frontmirror.jpg" class="show-for-small-only" alt="frontmirror" style="height: 32%; margin-left: 2rem;">
         </div>
     </div>
 
@@ -143,7 +149,7 @@
         <div class="grid-margin-y grid-padding-y show-for-large" style="height: 500px;">
             <h3 class="door" style="text-decoration: underline;">Opened Car Door Counter</h3>
             <p class="doorDesc cell medium-6" style="float: left; text-align: justify; margin-top: 3rem;">
-                This small and simple opened car door counter was a small little project I did.
+                This small and simple opened car door counter was a fun, small little project I did.
                 Although I did not set it up with an actual car, I was able to wire the circuit up and 
                 test my circuit on a breadboard. This system basically calculates how many doors are opened on a car.
                 I used multiple switches and flipped them on or off to represent a door being opened or closed.
@@ -153,7 +159,7 @@
             </p>
             <video width="400" height="600" controls style="float: right; position: relative; right: 2rem; height: 80%;">
                 <source src="door.mp4" type="video/mp4">
-                your browswer does not support the video tag.
+                your browser does not support the video tag.
             </video>
         </div>
 
@@ -161,7 +167,7 @@
         <div class="grid-margin-y grid-padding-y show-for-medium-only" style="height: 700px;">
             <h3 class="door" style="text-decoration: underline;">Opened Car Door Counter</h3>
             <p class="doorDesc cell medium-6" style="float: left; text-align: justify;">
-                This small and simple opened car door counter was a small little project I did.
+                This small and simple opened car door counter was a fun, small little project I did.
                 Although I did not set it up with an actual car, I was able to wire the circuit up and 
                 test my circuit on a breadboard. This system basically calculates how many doors are opened on a car.
                 I used multiple switches and flipped them on or off to represent a door being opened or closed.
@@ -171,16 +177,16 @@
             </p>
             <video width="200" height="400" controls style="float: right; position: relative; right: 1rem; height: 60%; margin-top: 1rem;">
                 <source src="door.mp4" type="video/mp4">
-                your browswer does not support the video tag.
+                your browser does not support the video tag.
             </video>
         </div>
 
 
         <!--SMALL-->
-        <div class="grid-margin-y grid-padding-y show-for-small-only" style="height: 700px;">
+        <div class="grid-margin-y grid-padding-y show-for-small-only" style="height: 750px;">
             <h3 class="door" style="text-decoration: underline;">Opened Car Door Counter</h3>
-            <p class="doorDesc cell medium-6" style="text-align: justify; width: 20rem">
-                This small and simple opened car door counter was a small little project I did.
+            <p class="doorDesc cell medium-5" style="text-align: justify; width: 22rem">
+                This small and simple opened car door counter was a fun, small little project I did.
                 Although I did not set it up with an actual car, I was able to wire the circuit up and 
                 test my circuit on a breadboard. This system basically calculates how many doors are opened on a car.
                 I used multiple switches and flipped them on or off to represent a door being opened or closed.
@@ -188,9 +194,9 @@
                 The purpose of this project was to help me understand how to use different IC (integrated circuit) chips and how
                 to use a seven-segment display. 
             </p>
-            <video width="300" height="200" controls>
+            <video width="350" height="200" controls>
                 <source src="door.mp4" type="video/mp4" style="margin-left: 3rem; margin-right: auto; height: 30%;">
-                your browswer does not support the video tag.
+                your browser does not support the video tag.
             </video>
         </div>
 
